[gd_scene load_steps=2 format=3 uid="uid://bm436kn6ywdfp"]

[ext_resource type="Script" path="res://ver_1/character/enemy/boss/solo_dance.gd" id="1_hhi7d"]

[node name="SoloDance" type="Node2D"]
script = ExtResource("1_hhi7d")
is_biano = true

[node name="SideChangeTimer" type="Timer" parent="."]

[connection signal="timeout" from="SideChangeTimer" to="." method="_on_side_change_timer_timeout"]
